syntax = "proto3";

package coding.core.cloud.provider;

option java_generic_services = true;
option java_package = "net.coding.cd.proto";
option java_outer_classname = "CloudAccountProto";

message emptyRequest {

}

message Kubernetes {
    string name = 1;
    string context = 2;
    string namespaces = 3;
    string kubeconfigContents = 4;
    bool serviceaccount = 5;
    repeated string roles = 6;
}

message KubernetesResponse {
    repeated Kubernetes Kubernetes = 1;
}

message Tencent {
    string name = 1;
    string secretId = 2;
    string secretKey = 3;
    repeated string regions = 4;
    repeated string roles = 5;
}

message TencentResponse {
    repeated Tencent tencent = 1;
}

service GrpcCloudAccountService {
    rpc getKubernetes (emptyRequest) returns (KubernetesResponse);
    rpc getTencent (emptyRequest) returns (TencentResponse);
}
